# Android-NDI-HX3

./: .gitignore  CLAUDE.md  README.md  ndi-dev-status.md  ndi-output-codex.md  ndi-receiver-app-spec.md  settings.gradle.kts  v0-design-prompt.md
.claude/: AGENTS.md
.claude/skills/: README.md
.claude/skills/ai-all/: SKILL.md
.claude/skills/ai-launch/: SKILL.md
.claude/skills/ai-parallel/: SKILL.md
.claude/skills/ndi-dev/: SKILL.md
.claude/skills/ndi-fix/: SKILL.md
.claude/skills/ndi-implement/: SKILL.md
.claude/skills/ndi-phase/: SKILL.md
.claude/skills/ndi-research/: SKILL.md
.claude/skills/ndi-review/: SKILL.md
.claude/skills/ndi-test/: SKILL.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ndi_wrapper.c
app/src/main/cpp/include/: .gitkeep
app/src/main/java/com/example/ndireceiver/: MainActivity.kt  NdiReceiverApplication.kt
app/src/main/java/com/example/ndireceiver/data/: RecordingRepository.kt  SettingsRepository.kt
app/src/main/java/com/example/ndireceiver/media/: ColorSpaceConverter.kt  UncompressedVideoEncoder.kt  UncompressedVideoRenderer.kt  VideoDecoder.kt  VideoEncoder.kt  VideoRecorder.kt
app/src/main/java/com/example/ndireceiver/ndi/: FourCC.kt  NdiFinder.kt  NdiManager.kt  NdiNative.kt  NdiReceiver.kt  NdiSource.kt  NdiSourceRepository.kt
app/src/main/jniLibs/arm64-v8a/: .gitkeep
app/src/main/jniLibs/armeabi-v7a/: .gitkeep
app/src/main/res/drawable/: circle_indicator.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  exoplayer_controls.xml  fragment_main.xml  fragment_playback.xml  fragment_player.xml  fragment_recordings.xml  fragment_settings.xml  item_ndi_source.xml  item_recording.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/xml/: file_paths.xml
(+15 files in other folders)
